- fix: scrolling overflow-y

--- a/src/app.css
+++ b/src/app.css
@@ -14,6 +14,7 @@
 html {
 	scroll-snap-type: y mandatory;
 	background-position-y: calc(var(--bg-y));
+	overscroll-behavior-y: none;
 }
 
 body {
